hphp/hack/test/typecheck/reified_generics/class_reified_generic_static_method_class_get.php
<?hh

class C {
  public static function f(): void {}
}

class Test<reify T as C> {
  public static function x(): void {
    T::f();
  }
}
